# mdu

schema/: .gitignore  Makefile  build.py  lambda.tf  main.tf  pyproject.toml  s3.tf  schedule.tf  sns.tf  variables.tf
schema/samples/: .gitignore  Makefile  SchemaICAL.ics  vt26.xml
schema/src/schema/: app.py  cli.py  logconfig.py  util.py
schema/src/schema/Lambda/: __init__.py  main.py  utils.py
schema/tools/: build-info  bundle  lambda
tåg/: .k  Makefile  build  main.js
