[project]
name = "schema"
version = "0.0.1"
requires-python = ">=3.13,<4"
dependencies = [
    "argcomplete (>=3.6.3,<4.0.0)",
    "icalendar (>=7.0.0a3,<8.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "boto3 (>=1.42.32,<2.0.0)",
]

[project.scripts]
schema = "schema.cli:main"

[build-system]
requires = ["poetry-core>=2.2.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
